syntax = "proto3";

package v1;

option go_package = "github.com/willexm1/go-llm-nexus/api/proto/v1";

service LLMService {
  rpc ProcessRequest (LLMRequest) returns (LLMResponse);
}

message LLMRequest {
  string prompt = 1;
  Provider provider = 2;
  float temperature = 3;
  int32 max_tokens = 4;
}

message LLMResponse {
  string content = 1;
  string provider_used = 2;
  int64 processing_time_ms = 3;
}

enum Provider {
  PROVIDER_UNSPECIFIED = 0;
  PROVIDER_OPENAI = 1;
  PROVIDER_GEMINI = 2;
}
